--- a/HomePage.cabal
+++ b/HomePage.cabal
@@ -16,6 +16,8 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Application
+                     , EventSourcing.Events
+                     , EventSourcing.Projections
                      , Views.AboutMe
                      , Views.Index
                      , Views.Layout
@@ -26,6 +28,7 @@ library
                      , servant-lucid
                      , servant-server
                      , text
+                     , time
                      , wai
                      , warp
   default-language:    Haskell2010
