--- a/HomePage.cabal
+++ b/HomePage.cabal
@@ -16,6 +16,9 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Application
+                     , Application.Auth
+                     , Application.Handler
+                     , Application.Session
                      , Database
                      , Database.EventSourcing
                      , Database.Model
@@ -29,14 +32,20 @@ library
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , bytestring
+                     , cereal
                      , containers
+                     , cryptonite
                      , data-default
+                     , exceptions
                      , free
                      , lucid
                      , monad-logger
+                     , mtl
+                     , network-uri
                      , persistent
                      , persistent-template
                      , resourcet
+                     , servant-auth-cookie
                      , servant-lucid
                      , servant-server
                      , text
@@ -53,9 +62,11 @@ executable HomePage-exe
   build-depends:       base
                      , HomePage
                      , aeson
+                     , cryptonite
                      , text
                      , persistent
                      , persistent-sqlite
+                     , servant-auth-cookie
   default-language:    Haskell2010
 
 test-suite HomePage-test
