--- a/HomePage.cabal
+++ b/HomePage.cabal
@@ -17,7 +17,10 @@ library
   hs-source-dirs:      src
   exposed-modules:     Application
                      , Application.Auth
+                     , Application.Context
                      , Application.Handler
+                     , Application.HandlerMonad
+                     , Application.Routing
                      , Application.Session
                      , Database
                      , Database.EventSourcing
