--- a/HomePage.cabal
+++ b/HomePage.cabal
@@ -29,14 +29,20 @@ library
                      , EventSourcing.Events
                      , EventSourcing.EventStore
                      , EventSourcing.Projections
+                     , Models.Blog
+                     , Models.Blog.Post
+                     , Models.Blog.Types
                      , Utils.Passwords
                      , Views.AboutMe
                      , Views.Index
                      , Views.Layout
                      , Views.LoginModal
                      , Views.Page
+                     , Views.ShowBlogPost
   build-depends:       base >= 4.7 && < 5
                      , aeson
+                     , blaze-html
+                     , blaze-markup
                      , bytestring
                      , cereal
                      , containers
@@ -47,6 +53,7 @@ library
                      , free
                      , http-api-data
                      , lucid
+                     , markdown >= 0.1.14
                      , memory
                      , monad-logger
                      , mtl
@@ -57,6 +64,7 @@ library
                      , servant-auth-cookie
                      , servant-lucid
                      , servant-server
+                     , skylighting >= 0.1.1.5
                      , text
                      , time
                      , transformers
