--- a/HomePage.cabal
+++ b/HomePage.cabal
@@ -99,6 +99,8 @@ test-suite HomePage-test
                      , hspec-wai
                      , hspec-wai-json
                      , aeson
+                     , cryptonite
+                     , servant-auth-cookie
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
