specialized to common event type and introduced Handler-actions for EventStreams

--- a/HomePage.cabal
+++ b/HomePage.cabal
@@ -32,6 +32,7 @@ library
                      , Models.Blog
                      , Models.Blog.Post
                      , Models.Blog.Types
+                     , Models.Events
                      , Utils.Passwords
                      , Views.AboutMe
                      , Views.Index
