--- a/HomePage.cabal
+++ b/HomePage.cabal
@@ -77,7 +77,7 @@ library
 executable HomePage-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , HomePage
                      , aeson
